# iArxiv

./: .gitignore  README.md  main.py  pyproject.toml  readjosnl.py
.github/workflows/: main.yml
dataset/astro-ph/: astro-ph.json
dataset/cond-mat_dis-nn/: cond-mat_dis-nn.json
dataset/cond-mat_mtrl-sci/: cond-mat_mtrl-sci.json
dataset/cond-mat_other/: cond-mat_other.json
dataset/cond-mat_quant-gas/: cond-mat_quant-gas.json
dataset/cond-mat_soft/: cond-mat_soft.json
dataset/cond-mat_stat-mech/: cond-mat_stat-mech.json
dataset/cond-mat_str-el/: cond-mat_str-el.json
dataset/cond-mat_supr-con/: cond-mat_supr-con.json
dataset/cs_AI/: cs_AI.json
dataset/cs_AR/: cs_AR.json
dataset/cs_CC/: cs_CC.json
dataset/cs_CE/: cs_CE.json
dataset/cs_CG/: cs_CG.json
dataset/cs_CL/: cs_CL.json
dataset/cs_CR/: cs_CR.json
dataset/cs_CV/: cs_CV.json
dataset/cs_CY/: cs_CY.json
dataset/cs_DB/: cs_DB.json
dataset/cs_DC/: cs_DC.json
dataset/cs_DL/: cs_DL.json
dataset/cs_DM/: cs_DM.json
dataset/cs_DS/: cs_DS.json
dataset/cs_ET/: cs_ET.json
dataset/cs_FL/: cs_FL.json
dataset/cs_GL/: cs_GL.json
dataset/cs_GR/: cs_GR.json
dataset/cs_GT/: cs_GT.json
dataset/cs_HC/: cs_HC.json
dataset/cs_IR/: cs_IR.json
dataset/cs_IT/: cs_IT.json
dataset/cs_LG/: cs_LG.json
dataset/cs_LO/: cs_LO.json
dataset/cs_MA/: cs_MA.json
dataset/cs_MM/: cs_MM.json
dataset/cs_MS/: cs_MS.json
dataset/cs_NA/: cs_NA.json
dataset/cs_NE/: cs_NE.json
src/: ArxivCollector.py  ColoredLogger.py  LatexProcessor.py  TikzFinder.py  demacro.py  mergetex.py
(+104 files in other folders)
